# tailmux

./: Cargo.toml  Makefile  README.md  about.hbs  about.toml  cliff.toml  dist-workspace.toml  tailmux.service
.github/workflows/: ci.yml  prepare-release.yml  release.yml
docs/: releasing.md
scripts/: install.sh
src/: client.rs  crypto.rs  main.rs  server.rs  web.rs
